# noema-evolve

./: .gitignore  2026-07-13-circle-packing-enriched-sweep-basic-review.md  CLAUDE.md  CONFIG.md  IMPLEMENTATION.md  Makefile  PLAN.md  README.md  pyproject.toml  work-order.json
.github/: pull_request_template.md
codex-skill-brain/: SKILL.md
docs/: DOC-STANDARD.md  agent-swarm.md
loop/: RUNBOOK.md  compost.md  conductor.md  contract.md  loop.sh  triage.md  verify-goals.sh  work-order.json
noema/: README.md  __init__.py  base.py  boundary.py  config.py  controller.py  cvt.py  cvt_behavior.py  database.py  evaluator.py  islands.py  operators.py  prompts.py  registry.py  tree.py  verify.py
presentation/: noema-controller-loop.dot
spec/: 0037-uct-selection.md  0083-tree-store.md  DELIVERABLES.md  LIVE-RUNS.md  LOOP-AUTONOMY.md  MLX-TRACK.md  STUDY.md
swarm/: swarm.sh
tests/: fixture_substrates.py  test_apply_diff.py  test_bin_packing_example.py  test_cvt.py  test_cvt_behavior.py  test_cvt_controller.py  test_cvt_policy.py  test_cvt_regions.py  test_kernelbench_p88_aggregate.py  test_kernelbench_p88_config.py  test_kernelbench_p88_protocol.py  test_noema_bandit.py  test_noema_boltzmann_fidelity_spec.py  test_noema_budget_ledger.py  test_noema_budgeted_llm.py  test_noema_config.py  test_noema_controller.py  test_noema_coordination_base.py  test_noema_coordination_substrate_contract_spec.py  test_noema_cross_substrate_portability.py  test_noema_hifo.py  test_noema_island_context.py  test_noema_islands_fidelity_spec.py  test_noema_llm_roles.py  test_noema_model_escalation.py  test_noema_pes.py  test_noema_pes_controller.py  test_noema_pes_phases.py  test_noema_prompts.py  test_noema_region_context.py  test_noema_selection_policy_interface_spec.py  (+12 more)
(+1716 files in other folders)
